# tests-render-engine

./: Cargo.toml  README.md
meshes/: cube.mtl  dodge.mtl
shaders/: ao_ao_frag.glsl  ao_blur_frag.glsl  ao_final_frag.glsl  ao_geo_frag.glsl  ao_geo_vert.glsl  ao_simple_vert.glsl  lighting_light_frag.glsl  lighting_object_frag.glsl  lighting_object_vert.glsl  many_objects_vert.glsl  no_app_vert.glsl
shaders/cubemap/: depth_view_frag.glsl  depth_view_vert.glsl  display_cubemap_frag.glsl  final_frag.glsl  final_vert.glsl  vert.glsl
shaders/depth-prepass/: convert_frag.glsl  convert_vert.glsl  depth_frag.glsl  depth_vert.glsl  object_frag.glsl  object_vert.glsl
shaders/lighting/: object_frag.glsl  object_vert.glsl
shaders/load-multiple/: basic_frag.glsl  basic_vert.glsl
shaders/no-app/: frag.glsl  vert.glsl
shaders/normal-mapping/: debug_vert.glsl  object_frag.glsl  object_frag_debug.glsl
shaders/obj-viewer/: frag.glsl  vert.glsl
shaders/pretty/: all_frag.glsl  blur_frag.glsl  diffuse_and_light_frag.glsl  display_cubemap_frag.glsl  frag.glsl  shadow_cast_frag.glsl  vert.glsl
shaders/shadows/: light_vert.glsl  object_frag.glsl  object_vert.glsl  temp_frag.glsl  temp_vert.glsl
shaders/visualize-normals/: object_frag.glsl  object_frag_normal.glsl  object_vert.glsl
src/: lib.rs  mesh.rs
